--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -7,12 +7,20 @@
       src="https://kit.fontawesome.com/4a2b055604.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Smile School</title>
   </head>
   <body>
+    <div class="landing-wrapper">
     <header>
       <nav>
-        <img class="/assets/logo.png" src="" alt="smile school logo" />
+        <img class="nav-logo" src="/assets/logo.png" alt="smile school logo" />
         <ul>
           <li><a>course</a></li>
           <li><a>pricing</a></li>
@@ -21,34 +29,35 @@
       </nav>
     </header>
     <main>
-      <section>
-        <div>
-          <h2>Get schooled</h2>
-          <span>smiles</span>
-          <span>grin</span>
-          <span>laugh</span>
+      <section class="section1">
+        <div class="header">
+          <h1>Get schooled</h1>
+          <div class="spans">
+            <span>smiles</span>
+            <span>grin</span>
+            <span>laugh</span>
+          </div>
           <button>register for free</button>
         </div>
-        <div>
-          <h2>Learn from the pros</h2>
-          <div>
-            <div>
+        <div class="pros">
+          <h2><span>Learn</span> from the pros</h2>
+          <div class="avatar-pros">
+            <div class="av">
               <img src="/assets/avatar.png" />
               <h3>Phillip Massey</h3>
               <p>« Smile of the year » 2018 - 2019</p>
             </div>
-
-            <div>
+            <div class="av">
               <img src="/assets/avatar (1).png" />
               <h3>Nannie Lawrence</h3>
               <p>Best « little smile » 2017</p>
             </div>
-            <div>
+            <div class="av">
               <img src="/assets/avatar (2).png" />
               <h3>Bruce Walters</h3>
               <p>Best « Friend Smile » live performance 2019</p>
             </div>
-            <div>
+            <div class="av">
               <img src="/assets/avatar (3).png" />
               <h3>Henry Hughes</h3>
               <p>« 24h smiles » winner 2016 - 2019</p>
@@ -56,17 +65,19 @@
           </div>
         </div>
       </section>
-      <section>
+      </div>
+      <section class="section2">
         <div>
           <img src="/assets/av-quote.png" />
         </div>
-        <div>
+        <div class="text">
           <blockquote>
             « Those tutorials are concise and go straight to the point. I can’t
             think of a better place to learn smiling. And it’s so fun!
           </blockquote>
+          <br>
           <h3>Person Name</h3>
-          <p>weather presenter</p>
+          <i><p>weather presenter</p></i>
         </div>
       </section>
       <section>
