--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -20,7 +20,7 @@
     <div class="landing-wrapper">
     <header>
       <nav>
-        <img class="nav-logo" src="/assets/logo.png" alt="smile school logo" />
+        <img class="nav-logo" src="./assets/logo.png" alt="smile school logo" />
         <ul>
           <li><a>course</a></li>
           <li><a>pricing</a></li>
@@ -40,35 +40,35 @@
           <button>register for free</button>
         </div>
         <div class="pros">
-          <h2><span>Learn</span> from the pros</h2>
+          <h2><span class="purple">Learn</span> from the pros</h2>
           <div class="avatar-pros">
             <div class="av">
-              <img src="/assets/avatar.png" />
+              <img src="./assets/avatar.png" />
               <h3>Phillip Massey</h3>
               <p>« Smile of the year » 2018 - 2019</p>
             </div>
             <div class="av">
-              <img src="/assets/avatar (1).png" />
+              <img src="./assets/avatar (1).png" />
               <h3>Nannie Lawrence</h3>
               <p>Best « little smile » 2017</p>
             </div>
             <div class="av">
-              <img src="/assets/avatar (2).png" />
+              <img src="./assets/avatar (2).png" />
               <h3>Bruce Walters</h3>
               <p>Best « Friend Smile » live performance 2019</p>
             </div>
             <div class="av">
-              <img src="/assets/avatar (3).png" />
+              <img src="./assets/avatar (3).png" />
               <h3>Henry Hughes</h3>
               <p>« 24h smiles » winner 2016 - 2019</p>
             </div>
           </div>
         </div>
-      </section>
+        </section>
       </div>
       <section class="section2">
         <div>
-          <img src="/assets/av-quote.png" />
+          <img src="./assets/av-quote.png" />
         </div>
         <div class="text">
           <blockquote>
@@ -80,87 +80,100 @@
           <i><p>weather presenter</p></i>
         </div>
       </section>
-      <section>
-        <h2>Most popular tutorials</h2>
-        <div>
-          <img src="/assets/Group 1.png" alt="" />
+      <!-- ------------ section3----------------------------- -->
+      <section class="section3">
+        <h2>Most <span class="purple">popular</span> tutorials</h2>
+        <div class="all-cards">
+        <div class="card">
+          <img src="./assets/Group 1.png" alt="" />
           <h3>Diagonal Smile</h3>
           <p>
             Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
           </p>
           <div>
-            <img src="/assets/avatar.png" alt="" />
+            <img src="./assets/avatar.png" alt="" class="card-avatar" />
             <h4>Phillip Massey</h4>
           </div>
-          <div>
+          <div class="div-time">
+          <div  class="stars">
             <div><i class="fa-solid fa-star"></i></div>
             <div><i class="fa-solid fa-star"></i></div>
             <div><i class="fa-solid fa-star"></i></div>
             <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
+            <div><i class="fa-solid fa-star grey"></i></div>
           </div>
-          <p>8 min</p>
+          <span class="time">8 min</span>
+          </div>
         </div>
-        <div>
-          <img src="/assets/Group 2.png" alt="" />
+        <div class="card">
+          <img src="./assets/Group 2.png" alt="" />
           <h3>Happy Smile</h3>
           <p>
             Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
           </p>
           <div>
-            <img src="/assets/avatar.png" alt="" />
+            <img src="./assets/avatar.png" alt=""  class="card-avatar"/>
             <h4>Phillip Massey</h4>
           </div>
-          <div>
+          <div class="div-time">
+          <div  class="stars">
             <div><i class="fa-solid fa-star"></i></div>
             <div><i class="fa-solid fa-star"></i></div>
             <div><i class="fa-solid fa-star"></i></div>
             <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
+            <div><i class="fa-solid fa-star grey"></i></div>
           </div>
-          <p>8 min</p>
+          <span class="time">8 min</span>
+          </div>
         </div>
-        <div>
-          <img src="/assets/Group 3.png" alt="" />
+        <div class="card">
+          <img src="./assets/Group 3.png" alt="" />
           <h3>Natural Smile</h3>
           <p>
             Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
           </p>
           <div>
-            <img src="/assets/avatar.png" alt="" />
+            <img src="./assets/avatar.png" alt="" class="card-avatar"/>
             <h4>Phillip Massey</h4>
           </div>
-          <div>
+          <div class="div-time">
+          <div  class="stars">
             <div><i class="fa-solid fa-star"></i></div>
             <div><i class="fa-solid fa-star"></i></div>
             <div><i class="fa-solid fa-star"></i></div>
             <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
+            <div><i class="fa-solid fa-star grey"></i></div>
           </div>
-          <p>8 min</p>
+          <span class="time" >8 min</span>
+          </div>
         </div>
-        <div>
-          <img src="/assets/Group 4.png" alt="" />
+        <div class="card">
+          <img src="./assets/Group 4.png" alt="" />
           <h3>Sad Smile</h3>
           <p>
             Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
           </p>
           <div>
-            <img src="/assets/avatar.png" alt="" />
+            <img src="./assets/avatar.png" alt="" class="card-avatar" />
             <h4>Phillip Massey</h4>
           </div>
-          <div>
+           <div class="div-time">
+          <div  class="stars">
             <div><i class="fa-solid fa-star"></i></div>
             <div><i class="fa-solid fa-star"></i></div>
             <div><i class="fa-solid fa-star"></i></div>
             <div><i class="fa-solid fa-star"></i></div>
-            <div><i class="fa-solid fa-star"></i></div>
+            <div><i class="fa-solid fa-star grey"></i></div>
           </div>
-          <p>8 min</p>
+          <span class="time">8 min</span>
+          </div>
+        </div>
         </div>
       </section>
-      <section>
-        <h2>Free membership</h2>
+
+      <section class="section4">
+        <h2><span class="purple">Free </span> membership</h2>
+        <div class="all-cards">
         <div>
           <img src="./assets/smile.png" alt="" />
           <h3>Lorem Ipsum</h3>
@@ -180,13 +193,14 @@
           <img src="./assets/smile.png" alt="" />
           <h3>Lorem Ipsum</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
         </div>
         <button>REGISTER FOR FREE</button>
       </section>
-      <section>
-        <h2>F.A.Q</h2>
-        <div>
-          <div>
+      <section class="section5">
+        <h2>F.A.Q.</h2>
+        <div class="main">
+          <div class="sub">
             <div>
               <h3>How does this work?</h3>
             </div>
@@ -199,7 +213,6 @@
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
               sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
-
             <div>
               <h3>How does this work?</h3>
             </div>
@@ -213,7 +226,7 @@
               sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
           </div>
-          <div>
+          <div class="sub">
             <div>
               <h3>How does this work?</h3>
             </div>
@@ -244,9 +257,9 @@
     </main>
     <footer>
       <section>
-        <div>
-          <img src="/assets/logo.png" alt="logo" />
-          <div>
+        <div class="footer">
+          <img src="./assets/logo.png" alt="logo" />
+          <div class="social-media">
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-instagram"></i>
