--- a/headphones/index.html
+++ b/headphones/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="landing-wrapper">
       <header>
-        <img src="assets/logo.png" alt="logo" />
+        <img src="assets/logo.png" alt="logo"  class="logo"/>
         <nav id="navLinks">
           <ul>
             <li><a href="#what-we-do">What we do</a></li>
@@ -24,8 +24,8 @@
             <li><a href="#contact">Contact us</a></li>
           </ul>
         </nav>
-        <!-- hamburger menu for mobile screens -->
-        <a class="menu-icon" id="menuToggle"><i class="fa-solid fa-bars"></i></a>
+        <!-- hamburger menu for mobile screens
+        <a class="menu-icon" id="menuToggle"><i class="fa-solid fa-bars"></i></a> -->
       </header>
       <main>
         <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
